styling recipe details on mobile, implemented put in backend and fixed bug on frontend, recipes of an user can now be updated

--- a/src/scss/includes/_modal.scss
+++ b/src/scss/includes/_modal.scss
@@ -1,7 +1,7 @@
 .modal {
     @extend .box;
     z-index: 1;
-    position: absolute;
+    position: fixed;
     top: 25%;
     margin: auto;
     width: 50%;
